# Competitive-programming

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  aaah.py  docker-compose.yml  test.ipynb  zigzag.py
Grid/: main.py
Kattis/: README.md  abc.py
Kattis/2048/: 2048.py  sample.ipynb
Kattis/3dprinter/: main.py
Kattis/From A to B/: main.py
Kattis/Test-Drive/: test-drive.py
Kattis/Texture Analysis/: main.py
Kattis/autori/: main.py
Kattis/npuzzle/: main.py
aoc/: README.md  various_ways_opening_the_input_file.py
aoc/Day 2/: day2.py
aoc/Day 3 Binary Diagnostic/: day3.py  input copy.txt
aoc/Day-1-Sonar-Sweep/: day1.py
aoc/Day-3-Binary-Diagnostic/: alternative_python_solution.py
aoc/Day-4-Giant-Squid/: alternativie_solution.py  day4.py  input copy.txt  test.py
aoc/Day-5-Hydrothermal-Venture/: day5.py  dis.py  test.py
aoc/Day-6-LanternFish/: alternative-python-soln.py  day-6.py
aoc/Day-7/: Day_7.xlsx
aoc/Day-7-The Treachery of Whales/: day-7.py
aoc/Day-8-Seven Segment Search/: Day-8.py  alternative_2.py
atcoder/AtCoder-Library-Practice-Contest/: F-Convolution.c
babelfish/: Babelfish.py
codeforces/: parkway_walk.py
codeforces/Watermelon/: watermelon.c
completingthesquare/: main.py
edx/Stanford/: CMakeLists.txt  main.py  swap.c
exercism/: armstrong-numbers.c  bob.c  collatz_conjecture.c  matching-brackets.c  minesweeper.c
exercism/C/: protein_translation.c  protein_translation.h  run_length_encoding.c  saddle-points.c
exercism/Python/: BinarySearchTree.py  Killer–Sudoku_Helper.py  Variable-Length-Quantity.py  zipper.py
exercism/Swift/: differences-of-squares.swift  gigasecond.swift
hackerrank/: README.md  Staircase.java  forming-a-magic-square.py  super_reduced_string.py  test.py
hackerrank/Algorithms/: README.md
hackerrank/Practice-C/: 1D-arrays.c  Boxes-through-a-Tunnel.c  Pointers-in-C.c  calculate-nth-term.c  digit-frequency.c  dynamic-array.c  print_patterns.c  small-triangles-large-triangles.c
hackerrank/grading-students/: grading_students.py
hackerrank/java-loops2/: Solution.java
header-files/: common.h
imagedecoding/: main.py
kattis/: README.md
kattis/2048/: sample.py
kattis/3dprinter/: main.py
knightjump/: main.py
leetcode/: 20.py  3.py  704.java  README.md
npuzzle/: main.c
okviri/: main.py
templates/: TemplateBR.java  TemplateFio.java  TemplateReader.java  argument_tuple_unpacking.py  standard input.py  template.cpp  template.py  zigzag_medium_sample_input.txt
(+159 files in other folders)
